# hasty-pudding

./: CMakeLists.txt  README.md
doc/: README  README2  hpc-nist-doc  hpc-overview  hpc.hlp
include/hpc/: hpc.h
scripts/: test-vectors.py
src/: hpc.c
tests/: test_lib.c  test_lib.cpp
vectors/: alpha10k  alpha50  cbc_d_m.txt  ecb_e_m.txt  ecb_vt.txt  kxexampl  len-scan-1200
vectors/mct/: mct-test  mct1  mct10  mct11  mct12  mct13  mct14  mct15  mct16  mct17  mct18  mct2  mct3  mct4  mct5  mct6  mct7  mct8  mct9
vectors/nist/: cbc_e_m.txt  ecb_d_m.txt  ecb_tbl.txt  ecb_vk.txt
vectors/traces/: tr1024e  tr127e  tr128e  tr129e  tr15e  tr16e  tr1e  tr2e  tr35e  tr36e  tr3e  tr4e  tr512e  tr513e  tr5e  tr64e  tr65e  tr6e  tr7e  trace-hpcksu
